# langfuse-hackathon

./: .gitignore  README.md
backend/: .env.example  main.py  models.py  pyproject.toml
backend/services/: ollama.py  openai_service.py  scrubber.py  vault.py
backend/tests/: test_ollama.py  test_openai_service.py  test_scrubber.py
docs/superpowers/plans/: 2026-04-15-paperwork-assistant.md
docs/superpowers/specs/: 2026-04-15-paperwork-assistant-design.md
mobile/: .env.example  app.json  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  index.tsx  result.tsx
mobile/src/: types.ts
